--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   // show the day's joke on load
   showJoke(currentIndex);
 
-// disable button so user cannot change joke today
+// no same-day regeneration
 btn.disabled = true;
 btn.textContent = "Come back tomorrow!";
   });
@@ -73,5 +73,6 @@ btn.textContent = "Come back tomorrow!";
   </script>
 </body>
 </html>
+
 
 
