--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>🎲 Today's Joke</h1>
+    <h1>🎲 Today's Joke (Updated)</h1>
     <p id="joke">Loading...</p>
     <small id="meta"></small><br/>
     <button id="another">Show another (same day)</button>
@@ -73,6 +73,7 @@ btn.textContent = "Come back tomorrow!";
   </script>
 </body>
 </html>
+
 
 
 
