--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>🎲 Today's Joke (Updated)</h1>
+    <h1>🎲 Today's Joke</h1>
     <p id="joke">Loading...</p>
     <small id="meta"></small><br/>
   </div>
@@ -67,6 +67,7 @@
   </script>
 </body>
 </html>
+
 
 
 
